[gd_scene load_steps=7 format=3 uid="uid://bip63jl0wtyl3"]

[ext_resource type="Texture2D" uid="uid://bgrugaomufrb6" path="res://Art/Inventory art/inventory-slot.png" id="1_d6duv"]
[ext_resource type="Script" path="res://Escenas/cartel_ganar_perder.gd" id="1_g3ayo"]
[ext_resource type="Texture2D" uid="uid://chbngiykwt11j" path="res://Art/Pantalla de inicio/Sin t√≠tulo-1.png" id="3_fyn4h"]
[ext_resource type="Texture2D" uid="uid://26jq0e4rp45d" path="res://Art/Pantalla de inicio/Boton_Salir.png" id="4_sbo3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_df2xk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0dv8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Node2D" type="Node2D"]
process_mode = 3
script = ExtResource("1_g3ayo")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(652, 581.875)
scale = Vector2(46.2813, 8.73438)
texture = ExtResource("1_d6duv")

[node name="ganaste" type="Label" parent="."]
visible = false
offset_left = 332.0
offset_top = 551.0
offset_right = 971.0
offset_bottom = 606.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Felicidades conseguiste los objetos necesarios para poder atraer los clientes y salvar el museo"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Perdiste" type="Label" parent="."]
visible = false
offset_left = 333.0
offset_top = 523.0
offset_right = 974.0
offset_bottom = 637.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "No lograste conseguir objetos que atraigan a la gente a nuestro museo y tuvimos que cerrar."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 810.0
offset_top = 453.0
offset_right = 1135.0
offset_bottom = 568.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxFlat_df2xk")
icon = ExtResource("3_fyn4h")

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 334.0
offset_top = 449.0
offset_right = 707.0
offset_bottom = 565.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxFlat_r0dv8")
icon = ExtResource("4_sbo3e")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
